--- a/form.html
+++ b/form.html
@@ -3,28 +3,40 @@
         <form onsubmit="saveToLocalStorage(event)">
             <label>Name</label>
             <input type="text" name="username" required/>
-            <label>Email</label>
+            <label>EmailId</label>
             <input type="email" name="emailId" required />
-            <label>phonenumber</label>
+            <label>Phone number</label>
             <input type="tel" name="phonenumber" />
-            <button>submitting</button>
+            <button>Submitt</button>
         </form>
+        <ul id='listOfitems'></ul>
         <script>
             function saveToLocalStorage(event){
                 event.preventDefault();
                 const name=event.target.username.value;
                 const email =event.target.emailId.value;
                 const phonenumber=event.target.phonenumber.value;
-                localStorage.setItem('name', name)
-                localStorage.setItem('email',email)
-                localStorage.setItem('phonenumber',phonenumber)
+                // localStorage.setItem('name', name)
+                // localStorage.setItem('email',email)
+                // localStorage.setItem('phonenumber',phonenumber)
                 const obj={
                      name,
                      email,
                      phonenumber
                      }                
-                localStorage.setItem('userDetails', JSON.stringify(obj))
+                localStorage.setItem(obj.email, JSON.stringify(obj))
+                showUserOnScreen(obj)
             }
+            function showUserOnScreen(obj){
+                const parentElem = document.getElementById('listOfitems'); 
+                const childElem = document.createElement('li')
+                childElem.textContent = obj.name + ' - ' + obj.email + ' - ' + obj.phonenumber ;
+                parentElem.appendChild(childElem)
+
+                //  parentElem.innerHTML = <li> ${obj.name} - ${obj.emailId} - ${obj.phonenumber}</li>
+            
+            }
+            
         </script>
     </body>
 </html>
